--- a/3..html
+++ b/3..html
@@ -10,11 +10,11 @@
 
 
 <body>
-    <h1><a href="http://127.0.0.1:5500/index.html">WEB</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
 <ol>
-    <li><a href="http://127.0.0.1:5500/1.html">HTML</a></li>
-    <li><a href="http://127.0.0.1:5500/2.html">CSS</a></li>
-    <LI><a href="http://127.0.0.1:5500/3..html">JavaScript</a></LI>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <LI><a href="3..html">JavaScript</a></LI>
 </ol>
 <h2>JavaScript</h2>
 <p>programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.[11] As of 2022, 98% of websites use JavaScript on the client side for webpage behavior,[12] often incorporating third-party libraries.[13] All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
