--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="http://127.0.0.1:5500/index.html">WEB</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
 <ol>
-    <li><a href="http://127.0.0.1:5500/1.html">HTML</a></li>
-    <li><a href="http://127.0.0.1:5500/2.html">CSS</a></li>
-    <LI><a href="http://127.0.0.1:5500/3..html">JavaScript</a></LI>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <LI><a href="3..html">JavaScript</a></LI>
 </ol>
 <h2>WEB</h2>
 <p>The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web resources to be accessed over the Internet.[1]
